--- a/app/views/bouts/index.html.haml
+++ b/app/views/bouts/index.html.haml
@@ -25,5 +25,5 @@
         %td= link_to 'Destroy', bout, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
 %br
-
+%div(id="content")
 = link_to 'New Bout', new_bout_path
